# mmap-append

./: Cargo.toml  LICENSE  README.md
src/: advice.rs  inner.rs  lib.rs
