[package]
name = "mmap-append"
version = "0.1.0"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Append-only memory-mapped I/O, resizable, with low lock contention"
repository = "https://github.com/mikedilger/mmap-append"
readme = "README.md"
keywords = [ "mmap" ]
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2"
memmap2 = "0.9.0"

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"
